--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Shaniqua A. Walker
 
 # Short bio or description (displayed in the header)
-description: I am a professional math tutor!
+description: Stats Grad Student
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/sawalker2/sawalker2.github.io/master/images/A Random Family Picture_SWalker.jpg
